--- a/application-dev.yml
+++ b/application-dev.yml
@@ -31,7 +31,7 @@ redis:
 ribbon:
   eager-load:
     enabled: true
-    clients: pig-auth,pig-upms-service
+    clients: beecloud-auth,beecloud-upms-service
   Httpclient:
     enabled: false
   OkHttp:
